# pyhecdss

./: .gitattributes  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  _pyheclib.cp37-win_amd64.pyd  build_all.bat  environment-dev.yml  environment.yml  jenkins_dwr.bat  jenkins_dwr.sh  large_dss_rts_timing.ipynb  pyhecdss.py  pyheclib.i  pyheclib.py  pyproject.toml  requirements-build.txt  requirements_dev.txt  run_test.bat  setup.cfg  setup.py  setup_dev_env.bat  testpyhecdss.py
.github/: ISSUE_TEMPLATE.md
conda.recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
docs/: _config.yml  conf.py  doall.bat  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  usage.rst
docsrc/: Makefile  conf.py  doall.bat  index.rst  installation.rst  pyhecdss.rst  requirements.txt  usage.rst
extensions/: heclib6-VE.lib
perftest/: hec_read_large_file.py  pydss_read_large_file.py  read_large_file.py  vscript_read_large_file.py
pyhecdss/: __init__.py  _pyheclib.cp37-win_amd64.pyd  _version.py  core.py  heclib.h  hecwrapper.c  hecwrapper.h  pyhecdss.py  pyheclib.i  pyheclib.py
tests/: __init__.py  context.py  historical_v82.dsd  large_dss_rts_timing.ipynb  pytest.ini  test1.dss  test_catalog.dsc  test_catalog_dsc_read.py  test_failing_catalog.dsc  test_helper.py  test_its1.dss  test_peraver.py  test_pyhecdss.py  test_pyhecdss_intrinsic.py  test_pyheclib.py  test_rts1.dss  test_rts_offset.py  test_twstr.py  testpyhecdss.py  testpyheclib.py
(+44 files in other folders)
